<?xml version="1.0"?>
<package format="2">
  <name>c1t_zed_driver</name>
  <version>0.0.0</version>
  <description>The c1t_zed_driver package</description>

  <maintainer email="nvidia@todo.todo">nvidia</maintainer>
  <author>Adam Morrissett</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cav_driver_utils</depend>
  <depend>cav_msgs</depend>
  <depend>roscpp</depend>
  <depend>zed_wrapper</depend>

  <export>
  </export>
</package>
